tests/kulezi_tests/bad/declaration_in_if.lat
int main() {
    if (true)
        int x = 1;
    return 0;
}